# llm-observability

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/define/: prd.md
docs/discovery/: brief.md
docs/plan/: plan.md
docs/specify/: spec.md
src/llmobs/: __init__.py  cli.py  config.py
src/llmobs/recording/: __init__.py  event.py  recorder.py  store.py
tests/: test_config.py  test_event.py  test_recorder.py
